@@ -6,3 +6,4 @@ mcu_program/*.ORC
 mcu_program/*.plg
 mcu_program/*.uvopt
 mcu_program/*.uvproj
+docs/LMS_API_Documentation/*
