@@ -754,8 +754,8 @@ API_EXPORT int CALL_CONV LMS_SetGFIR(lms_device_t * device, bool dir_tx,
 
 /**
  * Write value to VCTCXO trim DAC. Used to adjust/calibrate reference clock
- * generated by voltage controlled oscillator. 
- * @note calling this functions switches clock source to VCTCXO 
+ * generated by voltage controlled oscillator.
+ * @note calling this functions switches clock source to VCTCXO
  *
  * @param   dev         Device handle previously obtained by LMS_Open().
  * @param   val         Value to write to VCTCXO trim DAC, range 0-255
@@ -871,12 +871,13 @@ API_EXPORT int CALL_CONV LMS_WriteCustomBoardParam(lms_device_t *device,
  * Clock definitions for accessing specific internal clocks
  * @{
  */
-#define LMS_CLOCK_REF   0x0000  ///<Chip reference clock
-#define LMS_CLOCK_SXR   0x0001  ///<RX LO clock
-#define LMS_CLOCK_SXT   0x0002  ///<TX LO clock
-#define LMS_CLOCK_CGEN  0x0003  ///<CGEN clock
-#define LMS_CLOCK_RXTSP 0x0004  ///<RXTSP reference clock
-#define LMS_CLOCK_TXTSP 0x0005  ///<TXTSP reference clock
+#define LMS_CLOCK_REF    0x0000  ///<Chip reference clock
+#define LMS_CLOCK_SXR    0x0001  ///<RX LO clock
+#define LMS_CLOCK_SXT    0x0002  ///<TX LO clock
+#define LMS_CLOCK_CGEN   0x0003  ///<CGEN clock
+#define LMS_CLOCK_RXTSP  0x0004  ///<RXTSP reference clock
+#define LMS_CLOCK_TXTSP  0x0005  ///<TXTSP reference clock
+#define LMS_CLOCK_EXTREF 0x0006  ///<External reference clock
 
 /** @} (End LMS_CLOCK_ID) */
 
@@ -894,6 +895,9 @@ API_EXPORT int CALL_CONV LMS_GetClockFreq(lms_device_t *dev, size_t clk_id,
 
 /**
  * Set frequency of the specified clock
+ *
+ * @note setting ::LMS_CLOCK_EXTREF changes clock source to external, use
+ * ::LMS_VCTCXOWrite() to change back to VCTCXO
  *
  * @param   dev     Device handle previously obtained by LMS_Open().
  * @param   clk_id  Clock identifier
@@ -985,7 +989,7 @@ API_EXPORT int CALL_CONV LMS_GetChipTemperature(lms_device_t *dev, size_t ind,
 /**Metadata structure used in sample transfers*/
 typedef struct
 {
-    /** 
+    /**
      * Timestamp is a value of HW counter with a tick based on sample rate.
      * In RX: time when the first sample in the returned buffer was received
      * In TX: time when the first sample in the submitted buffer should be send
@@ -1143,7 +1147,7 @@ API_EXPORT int CALL_CONV LMS_SendStream(lms_stream_t *stream,
                             const void *samples,size_t sample_count,
                             const lms_stream_meta_t *meta, unsigned timeout_ms);
 
-/** 
+/**
  * Uploads waveform to on board memory for later use
  * @param device        Device handle previously obtained by LMS_Open().
  * @param samples       multiple channel samples data
@@ -1209,7 +1213,7 @@ typedef bool (*lms_prog_callback_t)(int bsent, int btotal, const char* progressM
  * @param target   device component to program ::lms_prog_trg_t
  * @param mode      programming mode ::lms_prog_md_t
  * @param callback  callback function for monitoring progress
- * 
+ *
  * @return          0 on success, (-1) on failure
  */
 API_EXPORT int CALL_CONV LMS_Program(lms_device_t *device, const char *data, size_t size,
@@ -1217,11 +1221,11 @@ API_EXPORT int CALL_CONV LMS_Program(lms_device_t *device, const char *data, siz
 
 /**
  * Automatically update device firmware
- * 
+ *
  * @param dev       Device handle previously obtained by LMS_Open().
  * @param download  True to download missing images from the web.
  * @param callback  callback function for monitoring progress
- * 
+ *
  * @return          0 on success, (-1) on failure
  */
 API_EXPORT int CALL_CONV LMS_ProgramUpdate(lms_device_t *dev, bool download,
